# elastic-ml-inference-k8s

./: .gitignore  README.md
autoscaler-cpp/: CMakeLists.txt  main.cpp
dispatcher/: main.py  requirements.txt
docs/: OPERATIONS.md  dev-log.md
inference-service/: Dockerfile  main.py  requirements.txt
inference-service/static/: index.html
k8s-manifests/: dispatcher-deployment.yaml  dispatcher-service.yaml  grafana-deployment.yaml  grafana-service.yaml  inference-deployment.yaml  inference-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
k8s-manifests/experiments/: hpa-70.yaml  hpa-90.yaml
load-tester/: run_experiment.py
monitoring/: prometheus.yml
results/: plot_comparison.py  plot_detailed.py
scripts/: quick_test.sh  rebuild-images.sh  start-cluster.sh
